--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <article class="card-block">
                         <h2 id="heading-profile">Perfil profesional</h2>
                         <p id="profile">
-                            Estudiante de Programación con interés en el desarrollo de software y web. Aprendo rápido, me adapto fácilmente y tengo pasión por la tecnología. Busco oportunidades para crecer como desarrollador y aportar a proyectos de software.
+                            Estudiante de Programación orientado al desarrollo de software y web. Con conocimientos en C++, C#, Python, JavaScript y entornos de servidor. Aprendo rápido, me adapto con facilidad y busco mejorar mi experiencia laboral
                         </p>
 
                         <h2 style="margin-top:18px" id="exp-heading">Experiencia</h2>
@@ -109,7 +109,7 @@
                     toggle: "Ver en Inglés",
                     title: "Estudiante de Programación",
                     profileHeading: "Perfil profesional",
-                    profileText: "Estudiante de Programación con interés en el desarrollo de software y web. Aprendo rápido, me adapto fácilmente y tengo pasión por la tecnología. Busco oportunidades para crecer como desarrollador y aportar a proyectos de software.",
+                    profileText: "Estudiante de Programación orientado al desarrollo de software y web. Con conocimientos en C++, C#, Python, JavaScript y entornos de servidor. Aprendo rápido, me adapto con facilidad y busco mejorar mi experiencia laboral",
                     expHeading: "Experiencia",
                     exp1Title: "Desarrollador Web Freelance",
                     exp1Date: "Marzo 2023 – Actualidad",
@@ -138,7 +138,7 @@
                     toggle: "Ver en Español",
                     title: "Programming Student",
                     profileHeading: "Professional Profile",
-                    profileText: "Programming student interested in software and web development. Quick learner, adaptable, and passionate about technology. Seeking opportunities to grow as a developer and contribute to impactful software projects.",
+                    profileText: "Programming student focused on software and web development. Knowledgeable in C++, C#, Python, JavaScript, and server environments. Quick learner, adaptable, and seeking to improve my professional experience.",
                     expHeading: "Experience",
                     exp1Title: "Freelance Web Developer",
                     exp1Date: "March 2023 – Present",
