--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <div class="experience">
                             <div class="item">
                                 <div class="title" id="exp1-title">Desarrollador Web Freelance</div>
-                                <div class="meta" id="exp1-date">Marzo 2023 – Actualidad</div>
+                                <div class="meta" id="exp1-date">Marzo 2024 – Actualidad</div>
                                 <ul id="exp1-list">
                                     <li>Desarrollo y despliegue de sitios web personalizados con HTML, CSS, JavaScript y Node.js, orientados a diseño responsivo y buena experiencia de usuario.</li>
                                     <li>Integración de bases de datos SQL (MySQL y SQL Server) para manejo de datos y backend.</li>
@@ -40,14 +40,15 @@
                             </div>
 
                             <div class="item">
-                                <div class="title" id="exp2-title">Atención al Cliente — Vendetta</div>
-                                <div class="meta" id="exp2-date">Enero 2023 – Junio 2024</div>
-                            </div>
-
-                            <div class="item">
                                 <div class="title" id="exp3-title">Promotor Financiero — Acceda</div>
                                 <div class="meta" id="exp3-date">Marzo 2025 – Junio 2025</div>
                             </div>
+
+                            <div class="item">
+                                <div class="title" id="exp2-title">Vendedor de indumentaria — Vendetta</div>
+                                <div class="meta" id="exp2-date">Enero 2023 – Junio 2024</div>
+                            </div>
+
                         </div>
 
                         <h2 style="margin-top:18px" id="edu-heading">Educación</h2>
@@ -94,7 +95,7 @@
             </main>
 
             <footer>
-                <p class="muted">Dante Corengia.</p>
+                <p class="muted">Dante Corengia</p>
             </footer>
         </div>
     </div>
@@ -112,13 +113,13 @@
                     profileText: "Estudiante de Programación orientado al desarrollo de software y web. Con conocimientos en C++, C#, Python, JavaScript y entornos de servidor. Aprendo rápido, me adapto con facilidad y busco mejorar mi experiencia laboral",
                     expHeading: "Experiencia",
                     exp1Title: "Desarrollador Web Freelance",
-                    exp1Date: "Marzo 2023 – Actualidad",
+                    exp1Date: "Marzo 2024 – Actualidad",
                     exp1List: [
                         "Desarrollo y despliegue de sitios web personalizados con HTML, CSS, JavaScript y Node.js, orientados a diseño responsivo y buena experiencia de usuario.",
                         "Integración de bases de datos SQL (MySQL y SQL Server) para manejo de datos y backend.",
                         "Uso de Git y VS Code; gestión y mantenimiento de servidores."
                     ],
-                    exp2Title: "Atención al Cliente — Vendetta",
+                    exp2Title: "Vendedor de indumentaria — Vendetta",
                     exp2Date: "Enero 2023 – Junio 2024",
                     exp3Title: "Promotor Financiero — Acceda",
                     exp3Date: "Marzo 2025 – Junio 2025",
@@ -135,19 +136,19 @@
                     languages: "Inglés — Intermedio<br>Italiano — Básico"
                 },
                 en: {
-                    toggle: "Ver en Español",
+                    toggle: "View in Spanish",
                     title: "Programming Student",
                     profileHeading: "Professional Profile",
                     profileText: "Programming student focused on software and web development. Knowledgeable in C++, C#, Python, JavaScript, and server environments. Quick learner, adaptable, and seeking to improve my professional experience.",
                     expHeading: "Experience",
                     exp1Title: "Freelance Web Developer",
-                    exp1Date: "March 2023 – Present",
+                    exp1Date: "March 2024 – Present",
                     exp1List: [
                         "Development and deployment of custom websites using HTML, CSS, JavaScript, and Node.js, focused on responsive design and user experience.",
                         "Integration of SQL databases (MySQL and SQL Server) for data handling and backend management.",
                         "Use of Git and VS Code; server configuration and maintenance."
                     ],
-                    exp2Title: "Customer Service — Vendetta",
+                    exp2Title: "Clothes shop — Vendetta",
                     exp2Date: "January 2023 – June 2024",
                     exp3Title: "Financial Promoter — Acceda",
                     exp3Date: "March 2025 – June 2025",
